--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,4 @@
-@import url("https://fonts.googleapis.com/css2?family=Arvo&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Merienda:wght@400;700&display=swap");
 
 body {
   background-color: #121212;
@@ -20,10 +20,47 @@ img {
   height: 350px;
   border-radius: 10px;
 }
+
+.wrapper {
+  background-color: #121212;
+}
+
 .title {
-  font-size: 2rem;
-  font-weight: 600;
-  color: #fff;
+  font-size: 4rem;
+  font-family: "Merienda", sans-serif;
+  margin: 1rem auto;
+  color: #fffefe61;
+  background: -webkit-gradient(
+      linear,
+      left top,
+      right top,
+      from(#e6e6e6),
+      to(#1d1c1c),
+      color-stop(0.8, #ffffff)
+    )
+    no-repeat;
+  background: gradient(
+      linear,
+      left top,
+      right top,
+      from(#222),
+      to(#222),
+      color-stop(0.9, #fff)
+    )
+    no-repeat;
+  background-size: 110px 100%;
+  -webkit-background-clip: text;
+  background-clip: text;
+  animation: flick 1.5s infinite;
+}
+
+@keyframes flick {
+  0% {
+    background-position: top left;
+  }
+  100% {
+    background-position: top right;
+  }
 }
 
 .recipes {
